# telemetry-course

./: .gitignore  Cargo.toml  README.md  ПЗ.docx  Титульник.docx
firmware/esp32_telemetry/: esp32_telemetry.ino
src/: main.rs
