[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT клиент
rumqttc = "0.23"

# JSON парсинг
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Асинхронность
tokio = { version = "1", features = ["full"] }

# Время (для красивых логов)
chrono = "0.4"

# Обработка ошибок
anyhow = "1.0"